######### 2014-7-28 ##########
alter table shop_trades_mergetrade add column scanner varchar(64) NOT NULL;
alter table shop_trades_mergetrade add column weighter varchar(64) NOT NULL;
######### 2014-7-28 ##########
alter table shop_refunds_refund drop index refund_id;
alter table shop_refunds_refund change refund_id refund_id varchar(32) NOT NULL;
alter table shop_refunds_refund change tid tid varchar(32) NOT NULL;

create unique index uqk_refund_id_trade_id on shop_refunds_refund(refund_id,tid);
######### 2014-7-25 ##########
alter table shop_weixin_order add column receiver_zone varchar(24) NOT NULL;
######### 2014-7-24 ###### zifei ####
alter table shop_weixin_user change baby_nick receiver_name varchar(64) NOT NULL;
alter table shop_weixin_user drop column baby_birth;
alter table shop_weixin_user add column birth_year int(11) DEFAULT 0;
alter table shop_weixin_user add column birth_month int(11) DEFAULT 0;
alter table shop_weixin_user add column referal_from_openid varchar(64) NOT NULL;
######### 2014-7-23 ########
alter table shop_weixin_account change jmenu jmenu varchar(4096) NOT NULL;
alter table shop_trades_mergebuyertrade ENGINE=InnoDB;
alter table shop_jingdong_product add column sync_stock tinyint(1) NOT NULL;
######### 2014-7-4 ##########
alter table shop_weixin_account add column order_updated datetime DEFAULT NULL;
alter table shop_weixin_account add column refund_updated datetime DEFAULT NULL;
######### 2014-7-1 ##########
alter table shop_weixin_account add column pay_sign_key pay_sign_key varchar(128) NOT NULL;
alter table shop_weixin_account add column partner_id varchar(32) NOT NULL;
alter table shop_weixin_account add column partner_key varchar(128) NOT NULL;
######### 2014-6-27 ##########
alter table shop_weixin_account add column pay_sign_key ;
alter table shop_users_user change column type type varchar(8) NOT NULL;
######### 2014-6-22 ##########