@@ -1,3 +1,5 @@
+alter table shop_weixin_product add sync_stock tinyint(1) NOT NULL;
+update shop_weixin_product set sync_stock=1 ;
 ######### 2014-7-28 ##########
 alter table shop_trades_mergetrade add column scanner varchar(64) NOT NULL;
 alter table shop_trades_mergetrade add column weighter varchar(64) NOT NULL;
